fix spacing after last comment, make rules + forum link stand out

--- a/public_html/templates/default/css/source/style.scss
+++ b/public_html/templates/default/css/source/style.scss
@@ -1241,6 +1241,7 @@ a.button {
 	border: var(--comment-box-border);
 	background: var(--comment-background-color);
 }
+.comment:last-child{margin-bottom:0px;}
 .comment.mod_queue
 {
 	margin-bottom: 0px;
